<resources>
    <string name="app_name">Sofront</string>
    <string name="name">이름</string>
    <string name="age">나이</string>
    <string name="level">운동수준</string>
    <string name="type">선호하는 운동 형태</string>
    <string name="purpose">운동 목적</string>
    <string name="time">평균 운동 시간</string>
    <string name="number">주당 운동 횟수</string>
    <array name="level_array">
        <item>헬생아</item>
        <item>헬린이</item>
        <item>헬소년</item>
        <item>헬창</item>
    </array>
    <array name="purpose_array">
        <item>다이어트</item>
        <item>벌크업</item>
        <item>유지?</item>
    </array>
    <array name="type_array">
        <item>유산소</item>
        <item>무산소</item>
    </array>
    <array name="time_array">
        <item>30분</item>
        <item>60분</item>
        <item>90분</item>
    </array>
    <array name="number_array">
        <item>1회</item>
        <item>2회</item>
        <item>3회</item>
        <item>4회</item>
        <item>5회</item>
        <item>6회</item>
        <item>7회</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="planlist">플랜 리스트</string>
    <string name="add">추가하기</string>
    <string name="title">제목</string>
    <string name="content">내용</string>
    <string name="default_number">99</string>
    <string name="date">2022–08–17</string>
    <string name="image">image</string>
    <string name="writer">작성자</string>
    <string-array name="custom_month">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>
    <string-array name="custom_weekdays">
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
        <item>일</item>
    </string-array>
</resources>