<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_weight="3"
        android:src="@drawable/gymdori"
        android:contentDescription="@string/image" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical"
        >
        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/portfolio_title"
            android:text="@string/title"
            android:fontFamily="@font/nixgonb"
            android:textSize="@dimen/big_font_size"
            />
        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/portfolio_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:fontFamily="@font/nixgonb"
            android:id="@+id/portfolio_date"
            android:textSize="@dimen/small_font_size"/>
        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/portfolio_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/portfolio_content"
            android:fontFamily="@font/nixgonb"
            android:text="@string/content"/>
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/portfolio_content"
            android:src="@drawable/ic_comment"
            android:id="@+id/portfolio_comment_icon"
            android:contentDescription="@string/image" />
        <TextView
            app:layout_constraintStart_toEndOf="@+id/portfolio_comment_icon"
            app:layout_constraintTop_toBottomOf="@+id/portfolio_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_font_size"
            android:text="@string/default_number"
            android:fontFamily="@font/nixgonb"
            android:id="@+id/portfolio_comment_num"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>