<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailInfoActivity">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <TextView
        android:id="@+id/user_name_tv"
        android:fontFamily="@font/nixgonb"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:text="@string/name"
        android:textSize="@dimen/small_font_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:layout_marginTop="@dimen/default_margin"
                android:fontFamily="@font/nixgonb"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="최소 3글자, 최대 15글자"
                android:textSize="@dimen/small_font_size"/>
    <EditText
        android:id="@+id/user_name_et"
        android:fontFamily="@font/nixgonm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:autofillHints="박성규"
        android:inputType="text"
        android:hint="이름을 입력하세요 (영어, 한글, 숫자 조합)"
        android:singleLine = "true"
        android:lines = "1"
        android:textSize="@dimen/medium_font_size"
        app:layout_constraintLeft_toLeftOf="@id/user_name_tv"
        app:layout_constraintTop_toBottomOf="@id/user_name_tv" />

    <TextView
        android:id="@+id/user_age_tv"
        android:fontFamily="@font/nixgonb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/age"
        android:textSize="@dimen/small_font_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name_et" />

    <EditText
        android:id="@+id/user_age_et"
        android:fontFamily="@font/nixgonm"
        android:inputType="numberSigned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:singleLine = "true"
        android:lines = "1"
        android:autofillHints="24"
        android:hint="나이를 입력하세요"
        android:textSize="@dimen/medium_font_size"
        android:imeOptions="actionDone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_age_tv" />

    <TextView
        android:id="@+id/user_level_tv"
        android:fontFamily="@font/nixgonb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/level"
        android:textSize="@dimen/small_font_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_age_et" />
            <TextView
                android:fontFamily="@font/nixgonb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/user_level_tv"
                app:layout_constraintTop_toBottomOf="@+id/user_age_et"
                android:textSize="@dimen/small_font_size"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:textColor="@color/teal_200"
                android:id="@+id/level_selected_tv"/>

    <ToggleButton
        android:id="@+id/user_level_toggle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/bread"
        android:textOn=""
        android:textOff=""
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:checked="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_age_et" />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/user_level_ll"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:visibility="visible"
        android:layout_marginEnd="@dimen/default_margin"
        tools:listitem="@layout/select_item_recycler"
        app:layout_constraintTop_toBottomOf="@+id/user_level_toggle"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/user_purpose_tv"
        android:fontFamily="@font/nixgonb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/purpose"
        android:textSize="@dimen/small_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_level_ll" />
            <TextView
                android:fontFamily="@font/nixgonb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_200"
                app:layout_constraintLeft_toRightOf="@+id/user_purpose_tv"
                app:layout_constraintTop_toBottomOf="@+id/user_level_ll"
                android:textSize="@dimen/small_font_size"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:id="@+id/purpose_selected_tv"/>
    <ToggleButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/hamburger"
        android:textOn=""
        android:textOff=""
        android:id="@+id/user_purpose_toggle"
        app:layout_constraintTop_toBottomOf="@+id/user_level_ll"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/user_purpose_ll"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                tools:listitem="@layout/select_item_recycler"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/user_purpose_toggle"
                app:layout_constraintStart_toStartOf="parent"/>


            <TextView
        android:id="@+id/user_type_tv"
        android:fontFamily="@font/nixgonb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/type"
        android:textSize="@dimen/small_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_purpose_ll" />
            <TextView
                android:fontFamily="@font/nixgonb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_200"
                app:layout_constraintLeft_toRightOf="@+id/user_type_tv"
                app:layout_constraintTop_toBottomOf="@+id/user_purpose_ll"
                android:textSize="@dimen/small_font_size"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:id="@+id/type_selected_tv"/>
    <ToggleButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/hamburger"
        android:textOn=""
        android:textOff=""
        android:id="@+id/user_type_toggle"
        app:layout_constraintTop_toBottomOf="@+id/user_purpose_ll"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/user_type_ll"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                tools:listitem="@layout/select_item_recycler"
                app:layout_constraintTop_toBottomOf="@+id/user_type_toggle"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
        android:id="@+id/user_time_tv"
        android:fontFamily="@font/nixgonb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/time"
        android:textSize="@dimen/small_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_type_ll" />
            <TextView
                android:fontFamily="@font/nixgonb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_200"
                app:layout_constraintLeft_toRightOf="@+id/user_time_tv"
                app:layout_constraintTop_toBottomOf="@+id/user_type_ll"
                android:textSize="@dimen/small_font_size"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:id="@+id/time_selected_tv"/>
    <ToggleButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/hamburger"
        android:textOn=""
        android:textOff=""
        android:id="@+id/user_time_toggle"
        app:layout_constraintTop_toBottomOf="@+id/user_type_ll"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:visibility="gone"
                android:id="@+id/user_time_ll"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                tools:listitem="@layout/select_item_recycler"
                app:layout_constraintTop_toBottomOf="@+id/user_time_toggle"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
        android:id="@+id/user_number_tv"
        android:fontFamily="@font/nixgonb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/number"
        android:textSize="@dimen/small_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_time_ll" />
            <TextView
                android:fontFamily="@font/nixgonb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_200"
                app:layout_constraintLeft_toRightOf="@+id/user_number_tv"
                app:layout_constraintTop_toBottomOf="@+id/user_time_ll"
                android:textSize="@dimen/small_font_size"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:id="@+id/number_selected_tv"/>
    <ToggleButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/hamburger"
        android:textOn=""
        android:textOff=""
        android:id="@+id/user_number_toggle"
        app:layout_constraintTop_toBottomOf="@+id/user_time_ll"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/user_number_ll"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                tools:listitem="@layout/select_item_recycler"
                app:layout_constraintTop_toBottomOf="@+id/user_number_toggle"
                app:layout_constraintStart_toStartOf="parent"/>
            <Button
                android:fontFamily="@font/nixgonm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/user_number_ll"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/end_bt"
                android:backgroundTint="@color/pastel_pink"
                                android:textSize="16sp"
                android:text="입력완료"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>