<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    tools:context=".PortfolioActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:id="@+id/portfolio_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nixgonb"
                android:text="제목"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:letterSpacing="-0.05"
                android:layout_marginTop="10dp"/>


            <TextView
                android:id="@+id/portfolio_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="방금 전"
                android:fontFamily="@font/nixgonm"
                android:textColor="@color/gray"
                android:textSize="15sp"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="3dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_img_in_portfolio"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/gymdori"/>

                <TextView
                    android:id="@+id/profile_name_in_portfolio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nixgonm"
                    android:text="홍길동"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/portfolio_img"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:src="@drawable/gymdori"
                android:contentDescription="@string/image"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/portfolio_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nixgonm"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:letterSpacing="-0.05"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_comment"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginEnd="6dp"
                    android:contentDescription="@string/image" />
                <TextView
                    android:id="@+id/portfolio_comment_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_number"
                    android:fontFamily="@font/nixgonm"
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:textSize="@dimen/small_font_size"/>
                <ImageView
                    android:id="@+id/like"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/ic_heart"
                    android:layout_marginEnd="6dp"
                    android:contentDescription="@string/image" />
                <TextView
                    android:id="@+id/portfolio_like_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_number"
                    android:fontFamily="@font/nixgonm"
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/small_font_size"/>
            </LinearLayout>
            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/radius"
                android:backgroundTint="#8F8F8F"
                android:layout_marginTop="20dp"/>

            <LinearLayout
                android:id="@+id/comment_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/radius"
                android:backgroundTint="#8F8F8F"
                android:weightSum="7"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:padding="8dp">

                <EditText
                    android:inputType="text"
                    android:id="@+id/comment_input"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="60dp"
                    android:gravity="top"
                    android:background="@drawable/signup_eidt"
                    android:backgroundTint="@color/white"
                    android:hint="댓글을 작성해주세요"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/nixgonm"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/comment_save_btn"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="@drawable/radius"
                    android:layout_marginStart="10dp"
                    android:text="등록"
                    android:fontFamily="@font/nixgonb"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/pastel_blue"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comment_rc"
                android:overScrollMode="never"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>